# WebParser

./: Bottom_Block.qml  CMakeLists.txt  DataForVisualElements.cpp  DataForVisualElements.h  Dataset.cpp  Dataset.h  Download.cpp  Download.h  InfoMessages.cpp  InfoMessages.h  Left_Block.qml  My_Button.qml  My_Input.qml  My_Message_Box.qml  My_Window.qml  Parser.cpp  Parser.h  Properties_Dialog.qml  Scroll_TextEdit.qml  ServerRequest.cpp  ServerRequest.h  TextFilters.cpp  TextFilters.h  ToolsEditsOfText.cpp  ToolsEditsOfText.h  Top_Block.qml  Win_Block.qml  Win_Image.qml  Win_Text.qml  main.cpp  main.qml
